Fixed highlighting on correct and incorrect letter inputs
Words are now normally spaced and not too far away from eachother

--- a/frontend/src/app/word/word.component.css
+++ b/frontend/src/app/word/word.component.css
@@ -3,7 +3,7 @@
 }
 
 .letter-right {
-    color: gray;
+    color: greenyellow;
 }
 
 span {
